# fnspkg

./: LICENSE.txt  pyproject.toml
fnspkg/: fnspkg.py  fnspkg_configs.py  fnspkg_encodings.py  fnspkg_field.py
fnspkg_nerfstudio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
outputs/lego/fnspkg/2023-12-22_234655/: config.yml
outputs/lego/fnspkg/2023-12-22_235259/: config.yml
